Implement Om.Next's Components, Identity & Normalization example in both atom and datascript for comparison

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -5,7 +5,8 @@
         <title>Om Tutorial!</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app-a"></div>
+        <div id="app-b"></div>
         <script src="js/main.js"></script>
     </body>
 </html>
