Add an example using Datascript's :db/id for om/Ident

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,6 +7,7 @@
     <body>
         <div id="app-a"></div>
         <div id="app-b"></div>
+        <div id="app-c"></div>
         <script src="js/main.js"></script>
     </body>
 </html>
