--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -3,6 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Om Experiments!</title>
+        <link href="https://cdn.quilljs.com/1.1.5/quill.snow.css" rel="stylesheet">
     </head>
     <body>
         <div id="app"></div>
